framer motion added reusable components added
Sidebar Main Content Breadcrumb

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       rel="stylesheet"
       href="https://unpkg.com/bs-brain@2.0.4/components/registrations/registration-7/assets/css/registration-7.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@coreui/coreui@5.1.2/dist/css/coreui.min.css"
+      rel="stylesheet"
+      integrity="sha384-lBISJVJ49zh34fnUuAaSAyuYzQ2ioGvhm4As4Z1JFde0kVpaC1FFWD3f9adpZrdD"
+      crossorigin="anonymous"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EAD APP</title>
   </head>
